--- a/emacs-init.org
+++ b/emacs-init.org
@@ -62,8 +62,8 @@
 
   (defconst ddavis-v-llvm-bin
     (cond (ddavis-v-is-mac "/usr/local/opt/llvm/bin")
-          (ddavis-v-is-cc7 "~/software/llvm/releases/10.x/bin")
-          (ddavis-v-is-grads-18 "~/software/llvm/releases/10.x/bin")
+          (ddavis-v-is-cc7 "/home/ddavis/software/llvm/releases/10.x/bin")
+          (ddavis-v-is-grads-18 "/home/drd25/software/specific/llvm/10.x/bin")
           (ddavis-v-is-dobian "/usr/bin"))
     "machine dependent llvm installation path")
 
@@ -84,33 +84,33 @@
 
   (defconst ddavis-v-rg-exe
     (cond (ddavis-v-is-mac "/usr/local/bin/rg")
-          (ddavis-v-is-cc7 "~/.cargo/bin/rg")
-          (ddavis-v-is-grads-18 "~/.cargo/bin/rg")
-          (ddavis-v-is-dobian "~/.cargo/bin/rg"))
+          (ddavis-v-is-cc7 "/home/ddavis/.cargo/bin/rg")
+          (ddavis-v-is-grads-18 "/home/drd25/.cargo/bin/rg")
+          (ddavis-v-is-dobian "/home/ddavis/.cargo/bin/rg"))
     "machine dependent ripgrep executable string")
 
   (defconst ddavis-v-fd-exe
     (cond (ddavis-v-is-mac "/usr/local/bin/fd")
-          (ddavis-v-is-cc7 "~/.cargo/bin/fd")
-          (ddavis-v-is-grads-18 "~/.cargo/bin/fd")
-          (ddavis-v-is-dobian "~/.cargo/bin/fd"))
+          (ddavis-v-is-cc7 "/home/ddavis/.cargo/bin/fd")
+          (ddavis-v-is-grads-18 "/home/drd25/.cargo/bin/fd")
+          (ddavis-v-is-dobian "/home/ddavis/.cargo/bin/fd"))
     "machine dependent fd executable string")
 
   (defconst ddavis-v-sendmail-program
-    (cond (ddavis-v-is-mac "~/software/localbase/bin/msmtp")
-          (ddavis-v-is-cc7 "~/software/localbase/bin/msmtp")
+    (cond (ddavis-v-is-mac "/Users/ddavis/software/localbase/bin/msmtp")
+          (ddavis-v-is-cc7 "/home/ddavis/software/localbase/bin/msmtp")
           (ddavis-v-is-grads-18 "/usr/bin/msmtp"))
     "machine dependent msmtp executable string")
 
   (defconst ddavis-v-mu-exe
-    (cond (ddavis-v-is-mac "~/software/mu/releases/1.4/bin/mu")
+    (cond (ddavis-v-is-mac "/Users/ddavis/software/mu/releases/1.4/bin/mu")
           (ddavis-v-is-cc7 "/usr/local/bin/mu")
-          (ddavis-v-is-grads-18 "~/software/localbase/bin/mu"))
+          (ddavis-v-is-grads-18 "/home/drd25/software/localbase/bin/mu"))
     "machine dependent mu executable string")
 
   (defconst ddavis-v-mu4e-dir
-    (cond (ddavis-v-is-mac "~/software/mu/releases/1.4/share/emacs/site-lisp/mu4e")
-          (ddavis-v-is-grads-18 "~/software/localbase/share/emacs/site-lisp/mu4e")
+    (cond (ddavis-v-is-mac "/Users/ddavis/software/mu/releases/1.4/share/emacs/site-lisp/mu4e")
+          (ddavis-v-is-grads-18 "/home/drd25/software/localbase/share/emacs/site-lisp/mu4e")
           (ddavis-v-is-cc7 "/usr/local/share/emacs/site-lisp/mu4e"))
     "machine dependent mu4e installation location string")
 #+end_src
